--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_FOLDER_RESTORED=restored
 NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_FOLDER_PROCESSING=processing
 NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_PUBLIC_URLL=https://zgbombqfufsncxrjoltc.supabase.co/storage/buckets/images
 NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_URL= https://zgbombqfufsncxrjoltc.supabase.co/storage/v1/object/images
-
+NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_FOLDER_COLLECTIONS = collections
 REPLICATE_API_TOKEN=5811ff647efb4ccf82ffa663f615d334
