--- a/.env
+++ b/.env
@@ -9,4 +9,5 @@ NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_FOLDER_PROCESSING=processing
 NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_PUBLIC_URLL=https://zgbombqfufsncxrjoltc.supabase.co/storage/buckets/images
 NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_URL= https://zgbombqfufsncxrjoltc.supabase.co/storage/v1/object/images
 NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_FOLDER_COLLECTIONS = collections
+NEXT_PUBLIC_SUPABASE_APP_BUCKET_IMAGE_FOLDER_FAVORITES = favorites
 REPLICATE_API_TOKEN=5811ff647efb4ccf82ffa663f615d334
