--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/post": {
-        "runtime": "nodejs14.x",
+        "node": "20.x",
         "maxDuration": 60
       }
     }
