--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/post": {
-        "node": "20.x",
+        "runtime": "node@20.x",
         "maxDuration": 60
       }
     }
