--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "functions": {
-      "api/post": {
+      "api/ai/replicate/post": {
+        "runtime": "node@20.x",
         "maxDuration": 60
       }
     }
