--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "app/api/**/*": {
-        "runtime": "vercel-php@0.5.2",
+        "runtime": "now-php@1.0.0",
         "maxDuration": 60
       }
     }
